@@ -1,6 +1,10 @@
 New in v1.1.16 (????/??/??)
 ---------------------------
 
+Handle Windows' lack of getuid(), getgid(), hardlinks and symlinks in
+fs_abilities.py. Use subproces.Popen() on Windows since it does not support
+os.popen2(). (Patch from Josh Nisly)
+
 Let setup.py accept arguments on Windows. (Patch from Josh Nisly)
 
 Get cmodule.c building natively on Windows. (Patch from Josh Nisly)
